--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  app:
+    image: aws-ecs-fargate-nodejs-todo-app:latest
+    ports:
+      - "4545:4545"
+    env_file:
+      - .env
+    depends_on:
+      - postgres
+    networks:
+      - todo
+    restart: always
+
   postgres:
     image: postgres:16
     ports:
@@ -7,3 +19,9 @@ services:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "password"
       POSTGRES_DB: "todos"
+    networks:
+      - todo
+    restart: always
+
+networks:
+  todo:
