--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "lib": ["ESNext"],
     "target": "ESNext",
-    "module": "commonjs",
+    "module": "ESNext",
     "moduleResolution": "node",
     "outDir": "dist",
     "emitDecoratorMetadata": true,
