--- a/services/api/docker-compose.dev.yml
+++ b/services/api/docker-compose.dev.yml
@@ -1,16 +1,4 @@
 services:
-  app:
-    image: aws-ecs-fargate-nodejs-todo-app:latest
-    ports:
-      - "4545:4545"
-    env_file:
-      - .env
-    depends_on:
-      - postgres
-    networks:
-      - todo
-    restart: always
-
   postgres:
     image: postgres:16
     ports:
@@ -21,7 +9,15 @@ services:
       POSTGRES_DB: "todos"
     networks:
       - todo
-    restart: always
+    restart: unless-stopped
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - todo
+    restart: unless-stopped
 
 networks:
   todo:
