--- a/services/api/package.json
+++ b/services/api/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.0",
     "helmet": "^8.0.0",
     "pg": "^8.11.3",
+    "redis": "^4.7.0",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
